--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.3",
+    "@types/mdx": "^2.0.10",
     "dompurify": "^3.0.6",
     "isomorphic-dompurify": "^1.11.0",
     "next": "14.0.3",
