--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "clean": "rm -rf build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -18,6 +19,7 @@
     "dompurify": "^3.0.6",
     "isomorphic-dompurify": "^1.11.0",
     "next": "14.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18"
   },
