--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/icalendar": "^6.1.10",
+    "@fullcalendar/react": "^6.1.10",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.3",
     "@types/mdx": "^2.0.10",
     "dompurify": "^3.0.6",
+    "ical.js": "^1.5.0",
     "isomorphic-dompurify": "^1.11.0",
     "next": "14.0.3",
     "prop-types": "^15.8.1",
@@ -40,6 +45,7 @@
     "eslint-config-next": "14.0.3",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
+    "raw-loader": "^4.0.2",
     "storybook": "^7.6.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
