See if workflow action triggers when setting branch

--- a/.github/workflows/fetch_meetup_ics.yml
+++ b/.github/workflows/fetch_meetup_ics.yml
@@ -1,6 +1,8 @@
 name: Fetch Meetup ICS File daily
 
 on:
+  push:
+    branches: [ feature_calendar ]
   schedule:
     # Runs at 2 AM PST every day
     - cron: '0 10 * * *'
