--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.3",
+    "@rooks/use-window-size": "^4.11.2",
     "@types/mdx": "^2.0.10",
     "dompurify": "^3.0.6",
     "ical.js": "^1.5.0",
