--- a/.github/workflows/fetch_bookwhen_ics.yml
+++ b/.github/workflows/fetch_bookwhen_ics.yml
@@ -18,14 +18,16 @@ jobs:
     - name: Fetch the file
       run: |
         curl -o public/calendars/bookwhen.ics  https://feeds.bookwhen.com/ical/x3ixm04f5wj7/yf23z4/public.ics 
+        curl -o public/calendars/google.ics https://calendar.google.com/calendar/ical/sequoiafabrica%40gmail.com/public/basic.ics 
 
     - name: Commit and push if there were changes
       run: |
         git config --local user.name "GitHub Actions Bot"
         git config --local user.email "actions@github.com"
         git add public/calendars/bookwhen.ics
+        git add public/calendars/google.ics
         git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}
-        git commit -m "Updated bookwhen.ics by GitHub Actions Bot" || echo "No changes to commit"
+        git commit -m "Updated .ics by GitHub Actions Bot" || echo "No changes to commit"
         git push
       env:
         GIT_AUTHOR_NAME: GitHub Actions Bot
