Fix annoying typescript stuff I don't understand; Clean up linting issues; import react-responsive so we can utilize useMedia query in custom `useBreakpoint` hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "typings.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "typings.d.ts", "tailwind.config"],
   "exclude": ["node_modules"]
 }
