--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "next": "14.0.3",
     "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.6",
