--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.11",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/icalendar": "^6.1.10",
@@ -20,7 +21,9 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.3",
+    "@popperjs/core": "^2.11.8",
     "@rooks/use-window-size": "^4.11.2",
+    "@types/core-js": "^2.5.8",
     "@types/mdx": "^2.0.10",
     "dompurify": "^3.0.6",
     "ical.js": "^1.5.0",
