--- a/.github/workflows/fetch_bookwhen_ics.yml
+++ b/.github/workflows/fetch_bookwhen_ics.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         git config --local user.name "GitHub Actions Bot"
         git config --local user.email "actions@github.com"
+        git pull
         git add public/calendars/bookwhen.ics
         git add public/calendars/google.ics
         git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}
