--- a/.github/workflows/fetch_bookwhen_ics.yml
+++ b/.github/workflows/fetch_bookwhen_ics.yml
@@ -6,6 +6,7 @@ on:
   schedule:
     # Runs at 2 AM PST every day
     - cron: '0 10 * * *'
+  workflow_dispatch: # allow manual triggering
 
 jobs:
   fetch-and-commit:
