--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "typings.d.ts", "tailwind.config"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "typings.d.ts", "tailwind.config", "src/pages/docs/donate.mdx"],
   "exclude": ["node_modules"]
 }
